...
                                <exclude reference="Qw1-bf-Qef"/>
                                <exclude reference="aEN-3p-p4W"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" id="JdQ-Sw-gRJ">
                        <barButtonItem key="rightBarButtonItem" title="About" id="88g-jM-9z2">
                            <connections>
                                <segue destination="gIv-rc-HP9" kind="show" identifier="ShowAbout" id="mfd-y5-cyH"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
...
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="RmB-mN-UBn">
                                <rect key="frame" x="20" y="243" width="728" height="774"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UiV-kl-17b">
                                        <rect key="frame" x="0.0" y="362" width="145" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FacebookButton"/>
                                        <state key="normal" image="UIButtons_Facebook"/>
                                        <connections>
                                            <action selector="postFacebook:" destination="gIv-rc-HP9" eventType="touchUpInside" id="Cfb-xL-xGt"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VRJ-zl-3s6">
                                        <rect key="frame" x="145" y="362" width="145" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TwitterButton"/>
                                        <state key="normal" image="UIButtons_Twitter"/>
                                        <connections>
                                            <action selector="postTweet:" destination="gIv-rc-HP9" eventType="touchUpInside" id="14h-zn-E4w"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IC7-Ss-wPU">
                                        <rect key="frame" x="289" y="362" width="145" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AppStoreButton"/>
                                        <state key="normal" image="UIButtons_Rate"/>
                                        <connections>
                                            <action selector="rateApp:" destination="gIv-rc-HP9" eventType="touchUpInside" id="Dgo-RH-iME"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODn-Ri-cEP">
                                        <rect key="frame" x="434" y="361" width="150" height="52"/>
                                        <accessibility key="accessibilityConfiguration" identifier="RestorePurchaseButton"/>
                                        <state key="normal" image="UIButtons_RestorePurchase"/>
                                        <connections>
                                            <action selector="restorePurchases:" destination="gIv-rc-HP9" eventType="touchUpInside" id="los-cK-ybc"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frU-lY-0RD">
                                        <rect key="frame" x="584" y="362" width="145" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="RemoveAdsButton"/>
                                        <state key="normal" image="UIButtons_RemoveAds"/>
                                        <connections>
                                            <action selector="removeAds:" destination="gIv-rc-HP9" eventType="touchUpInside" id="Ypc-QA-VEF"/>
                                        </connections>
                                    </button>
                                </subviews>
...
