...
      presentViewController(post, animated: true, completion: nil)
      
    } else {
      
      // Facebook is not available. Show a warning.
      let alert = UIAlertController(title: "Facebook Unavailable", message: "User is not signed in", preferredStyle: .Alert)
      alert.addAction(UIAlertAction(title: "OK", style: .Default, handler: nil))
      presentViewController(alert, animated: true, completion: nil)
    }
  }
  
  /**
   Show Twitter compost view.
...
      // Open App in AppStore
      let link = "https://itunes.apple.com/app/id\(App.id)"
      
      UIApplication.sharedApplication().openURL(NSURL(string: link)!)
      })
    
    alert.addAction(UIAlertAction(title: "Cancel", style: .Default, handler: nil))
    
    presentViewController(alert, animated: true, completion: nil)
    
  }
  
  /**
...
